# banco-prompts

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/apps/prompts/: admin_views.py  apps.py  models.py  services.py  urls.py  views.py
src/config/: settings.py  urls.py
src/db/: base.py  engine.py
src/db/migrations/: env.py
src/db/migrations/versions/: 001-initial_tables.py  002-seed_categories_providers.py
src/static/js/: base.js  prompts.js  theme-init.js
src/templates/: base.html
src/templates/admin/: dashboard.html  index.html  prompt_list.html  sqla_list.html
src/templates/prompts/: index.html  submit.html
tests/: conftest.py  test_prompts.py
