[project]
name = "banco-prompts"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
